[package]
name = "rwm"
version = "0.1.0"
authors = ["Julius Kreutz <julius@kreutz.dev>"]
edition = "2021"
description = "A small rust window manager"
readme = "README.md"
repository = "https://github.com/JuliusKreutz/rwm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true
panic = "abort"

[dependencies]
pangocairo = "0.19.2"
xcb-util = { git = "https://github.com/juliuskreutz/xcb-util-rs", version = "0.1.0", features = [
  "cursor",
] }

[dependencies.xcb]
version = "1.4.0"
features = ["xinerama"]

[dependencies.cairo-rs]
version = "0.19.4"
features = ["xcb"]
